# sed

./: .clang-format  .gitignore  Makefile  README.md  meson.build
src/: exec.c  main.c  meson.build  parse.c  sed.c  sed.h  utils.c
test/: meson.build  test_exec.c  test_parse.c  test_utils.c
test_integration/: README.md  sed.tests
